@@ -237,11 +237,11 @@ namespace NHibernate.Driver
 				return;  // named parameters are ok
 
 			var expandedParameters = new List<IDbDataParameter>();
-			foreach (object part in sqlString.Parts)
+			foreach (object part in sqlString)
 			{
-				if (part is Parameter)
+				var parameter = part as Parameter;
+				if (parameter != null)
 				{
-					var parameter = (Parameter)part;
 					var originalParameter = (IDbDataParameter)cmd.Parameters[parameter.ParameterPosition.Value];
 					expandedParameters.Add(CloneParameter(cmd, originalParameter));
 				}
